@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
- <email>enlightenment@gentoo.org</email>
-</maintainer>
+	<herd>no-herd</herd>
+	<maintainer>
+		<email>enlightenment@gentoo.org</email>
+	</maintainer>
+	<longdescription>
+		Some kind of xdialog-analogue for use into shell scripts. Works via ETK.
+	</longdescription>
 </pkgmetadata>
